--- a/style.css
+++ b/style.css
@@ -8,22 +8,10 @@
     box-sizing: inherit;
 }
 :root {
-    --primary-050: #ff7d7d; /* サンプル */
-    --secondary-050: #ffd580; /* サンプル */
-    --dark-087: rgba(0,0,0,0.87);
-    --dark-054: rgba(0,0,0,0.54);
-    --dark-026: rgba(0,0,0,0.26);
-    --dark-012: rgba(0,0,0,0.12);
-    --light-100: rgba(255,255,255,1.00);
-    --light-070: rgba(255,255,255,0.70);
-    --light-030: rgba(255,255,255,0.30);
-    --light-012: rgba(255,255,255,0.12);
-    --gray-010: #f1f1f1;
-    --gray-020: #e4e4e4;
-
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
     font-feature-settings: "palt";
     font-size: 16pt;
+    color: rgb(51, 51, 51);
 }
 
 
@@ -51,7 +39,7 @@
     text-decoration: none;
     list-style: none;
 
-    color: rgb(0, 0, 0);
+    color: rgb(51, 51, 51);
 }
 
 .global-nav .menu ul {
@@ -62,7 +50,7 @@
 
 .global-nav .menu ul a {
     width: 8rem;
-    color: rgb(0, 0, 0);
+    color: rgb(51, 51, 51);
     text-align: center;
     text-decoration: none;
 
@@ -109,10 +97,21 @@
 
 }
 
+h2 {
+    font-size: 3rem;
+    color: rgb(51, 51, 51);
 
+}
+
+h3 {
+    font-size: 2rem;
+    color: rgb(51, 51, 51);
+}
 
 section {
     height: 100vh;
+    min-width: 1100px;
+    min-height: 950px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -121,8 +120,80 @@ section {
 
 section:nth-child(2n + 1) {
     background-color: rgb(170, 170, 170);
-    color: black;
+    color: rgb(51, 51, 51);
 }
+
+#sec2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#sec2 p{
+    font-size: 1.35rem;
+    color: rgb(51, 51, 51);
+    line-height: 2.5rem;
+    text-align: center;
+}
+
+#sec3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#sec3 h2 {
+    margin-top: 1.5rem;
+}
+
+#sec3 h3 {
+    margin-top: 1rem;
+}
+
+#sec3 p {
+    font-size: 1.35rem;
+    color: rgb(51, 51, 51);
+    line-height: 2.5rem;
+}
+
+.contact {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    
+}
+
+.contact h2 {
+    margin-right: 3rem;
+}
+
+
+
+.social {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+}
+
+.social li {
+    font-size: 3rem;
+    color: rgb(51, 51, 51);
+    margin-top: 1rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.social li a {
+    text-decoration: none;
+    color: rgb(51, 51, 51);
+    transition: 0.3s color;
+}
+
+.social li a:hover {
+    color: #fff;
+}
+
+
 
 #sec4 {
     display: flex;
@@ -130,16 +201,16 @@ section:nth-child(2n + 1) {
     
 }
 
-#sec4 header {
-    font-size: 3rem;
+#sec4 h2 {
     margin-top: 4rem;
-
 }
+
+
 
 .gall-item-cont {
     width: 100%;
     height: 100%;
-    flex-grow: 5;
+    max-width: 2100px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -148,32 +219,38 @@ section:nth-child(2n + 1) {
 }
 
 .gall-item {
-    width: 30%;
-    height: 30%;
-    box-shadow:0px 0px 10px -1px #000000;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    flex-direction: row;
+    width:25vw;
+    height: 18.75vw;
+    min-width: 360px;
+    min-height: 270px;
+    max-width: 640px;
+    max-height: 480px;
+
+    box-shadow:0px 0px 10px -1px rgb(51, 51, 51);
     border-bottom-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+
+    cursor: pointer;
+    transition: 0.5s;
 }
 
-.gall-item-img {
-
-    overflow: hidden;
+.gall-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-bottom-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    border: 2px solid  rgb(238, 238, 238);
     
+    transition: 0.5s;
 }
 
-.gall-item-tex {
-    background-color: #fff;
-    overflow: hidden;
+.gall-item:hover > img{
+    border: 10px solid  rgb(238, 238, 238);
 }
 
-.gall-item-tex h4 {
-    font-size: 1.5rem;
+.gall-item:hover {
+    transform: scale(1.1, 1.1);
+    box-shadow:0px 0px 20px 1px rgb(51, 51, 51);
 }
 
-.gall-item-tex p {
-    font-size: 1rem;
-}
