--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ section:nth-child(2n + 1) {
 .gall-item-cont {
     width: 100%;
     height: 100%;
+    min-width: 1200px;
     max-width: 2100px;
     display: flex;
     flex-direction: row;
@@ -225,6 +226,9 @@ section:nth-child(2n + 1) {
     min-height: 270px;
     max-width: 640px;
     max-height: 480px;
+
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 
     box-shadow:0px 0px 10px -1px rgb(51, 51, 51);
     border-bottom-left-radius: 2rem;
