--- a/style.css
+++ b/style.css
@@ -97,6 +97,12 @@
 
 }
 
+#sec1 {
+    display: flex;
+    flex-direction: column;
+}
+
+
 h2 {
     font-size: 3rem;
     color: rgb(51, 51, 51);
@@ -118,7 +124,7 @@ section {
     font-size: 5rem;
 }
 
-section:nth-child(2n + 1) {
+section:nth-child(2n) {
     background-color: rgb(170, 170, 170);
     color: rgb(51, 51, 51);
 }
