--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ section:nth-child(2n) {
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: space-around;
+
 }
 
 
@@ -260,12 +261,31 @@ section:nth-child(2n) {
     transition: 0.5s;
 }
 
+.gall-item video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-bottom-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    border: 2px solid  rgb(238, 238, 238);
+    
+    transition: 0.5s;
+}
+
 .gall-item:hover > img{
     border: 5px solid  rgb(238, 238, 238);
 }
+
+.gall-item:hover > video{
+    border: 5px solid  rgb(238, 238, 238);
+}
+
 
 .gall-item:hover {
     transform: scale(1.1, 1.1);
     box-shadow:0px 0px 20px 1px rgb(51, 51, 51);
 }
+
+
+
 
