--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ section:nth-child(2n) {
     border-bottom-left-radius: 2rem;
     border-top-right-radius: 2rem;
     border: 2px solid  rgb(238, 238, 238);
+    overflow: hidden;
     
     transition: 0.5s;
 }
