--- a/modal.css
+++ b/modal.css
@@ -76,18 +76,15 @@
     width: 65%;
     height: 20%;
     background-color: #bbbbbb;
+    font-size: 2rem;
+    color: #fff;
     display: flex;
-    flex-direction: row; 
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
+    
 }
 
-.modal-item-tytle img {
-    width: 20%;
-    height: 80%;
-    object-fit: cover;
 
-}
 
 
 .modal-item-spec {
